# HuoziIME

./: .gitignore  .gitmodules  README.md  build.gradle
app/: build.gradle  proguard.cfg
app/src/main/: AndroidManifest.xml
app/src/main/java/com/yuyan/: BaseApplication.kt
app/src/main/res/xml/: method.xml
yuyansdk/: .gitignore  README.md  build.gradle
yuyansdk/libs/include/: openblas_config.h
yuyansdk/src/main/: .gitignore  AndroidManifest.xml
yuyansdk/src/main/assets/performance/: plot_metrics_template.py
yuyansdk/src/main/cpp/: CMakeLists.txt  imem_core.h  imem_logic_cache.cpp  imem_logic_gen.cpp  imem_perf.h  imem_perf_jni.cpp  imem_utils.cpp  imem_vector_db.cpp  imem_vector_db.h  native-lib.cpp
yuyansdk/src/main/cpp/llama.cpp/: CMakeLists.txt
yuyansdk/src/main/cpp/llama.cpp/ggml/: CMakeLists.txt
yuyansdk/src/main/cpp/llama.cpp/ggml/src/: CMakeLists.txt
yuyansdk/src/main/cpp/llama.cpp/ggml/src/ggml-blas/: ggml-blas.cpp
yuyansdk/src/main/cpp/llama.cpp/include/: llama.h
yuyansdk/src/main/cpp/llama.cpp/src/: llama-context.cpp  llama-kv-cache.cpp  llama-kv-cache.h
yuyansdk/src/main/java/com/yuyan/imemodule/data/: SkbFunData.kt
yuyansdk/src/main/java/com/yuyan/imemodule/database/: DataBaseKT.kt
yuyansdk/src/main/java/com/yuyan/imemodule/keyboard/: GhostTextPopupWindow.kt  InputView.kt  KeyMnemonicPreset.kt  KeyPreset.kt  KeyPresetSamsung.kt  SettingsMenuClick.kt
yuyansdk/src/main/java/com/yuyan/imemodule/llm/: LLMBridge.kt  MemoryPromptSegments.kt  PhraseCandidatesEngine.kt
yuyansdk/src/main/java/com/yuyan/imemodule/performance/: NativePerformanceTracker.kt  PerformanceMetric.kt  PerformanceTestActivity.kt  PerformanceTestSuite.kt  PerformanceTracker.kt
yuyansdk/src/main/java/com/yuyan/imemodule/service/: DecodingInfo.kt  ImeService.kt  (+1 more)
yuyansdk/src/main/res/drawable/: ic_sdk_launcher_debug.xml  la_icon.xml
yuyansdk/src/main/res/layout/: activity_performance_test.xml  dialog_progress.xml  fragment_setup.xml  sdk_skb_container.xml
yuyansdk/src/main/res/values/: strings.xml
yuyansdk/src/offline/res/raw/: privacypolicy.json
yuyansdk/src/online/res/raw/: privacypolicy.json
(+20 files in other folders)
